--- a/index.css
+++ b/index.css
@@ -5,9 +5,9 @@
     margin-bottom: 0;
      /* background-color: #fff; */
      background-image: url("file:///Users/adiskop/Downloads/928C4956-A7CC-4D39-AEEF-56D708B0FFF5%203.jpg");
-     background-size: 1970px;
-     width: 1430px;
-     height: 900px;
+     background-size: cover;
+     background-repeat: no-repeat;
+     
    
      
   }
@@ -38,6 +38,3 @@
   footer p {
     margin-bottom: .25rem;
   }
-  
-
-  
