--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@
     margin-bottom: 0;
      /* background-color: #fff; */
      background-image: url("file:///Users/adiskop/Downloads/928C4956-A7CC-4D39-AEEF-56D708B0FFF5%203.jpg");
-     background-size: cover;
+     background-position: center;
      background-repeat: no-repeat;
+     background-size: cover;
      
    
      
@@ -28,8 +29,18 @@
   
   .jumbotron .container {
     max-width: 40rem;
+    background: rgba(255, 255, 255, 0.4);
+    padding:2rem;
+    color: white;
   }
   
+
+.jumbotron p {
+  color: white;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+
   footer {
     padding-top: 3rem;
     padding-bottom: 3rem;
