--- a/index.css
+++ b/index.css
@@ -35,10 +35,19 @@
   }
   
 
-.jumbotron p {
+.jumbotron section {
   color: white;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+
+.card-img-overlay {
+  font-family: 'Papyrus';
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+
 
 
   footer {
