--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     padding-bottom: 3rem;
     margin-bottom: 0;
      /* background-color: #fff; */
-     background-image: url("file:///Users/adiskop/Downloads/928C4956-A7CC-4D39-AEEF-56D708B0FFF5%203.jpg");
+     background-image: url(./background.jpg)
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
