--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     padding-bottom: 3rem;
     margin-bottom: 0;
      /* background-color: #fff; */
-     background-image: url(./background.jpg)
+     background-image: url('https://images.unsplash.com/photo-1614357932292-a38393b966a3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80');
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
