--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     padding-bottom: 3rem;
     margin-bottom: 0;
      /* background-color: #fff; */
-     background-image: url(./background.jpg)
+     background-image: url("traveljam_background_picture.jpg");
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;
